fix: too much spacing on navbar mobile

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,13 +14,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1em 2em;
+    padding: 0.5em 1.5em;
     background: #191925;
 }
 .header-for-mobile .search-fields {
     display: flex;
     justify-content: space-between;
-    padding: 1em 2em;
+    padding: 1em 1.5em;
     background: #010210;
 }
 .header-for-mobile .search-fields input, select {
@@ -40,7 +40,7 @@ body {
     padding-left: 12px;
 }
 .logo {
-    width: 42px;
+    width: 38px;
 }
 nav {
     color: white;
@@ -50,7 +50,7 @@ nav {
     width: 100%;
     height: 100vh;
     background-color: #01010B;
-    padding: 5em 0 0 4em;
+    padding: 2.5em 0 0 3em;
     transition: 500ms ease-in-out all;
 }
 nav.active {
@@ -75,7 +75,7 @@ nav a {
 }
 li {
     list-style: none;
-    line-height: 50px;
+    line-height: 40px;
     margin: 0.4em 0;
 }
 li a img {
@@ -87,8 +87,8 @@ li:focus, li:active, li:hover {
 }
 nav #close-icon {
     position: absolute;
-    top: 5em;
-    right: 4em;
+    top: 3.5em;
+    right: 3em;
     width: 40px;
 }
 main {
